--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,9 @@
+
+
 {
   "development": {
     "username": "root",
-    "password": "password",
+    "password": "052595my",
     "database": "recipedb",
     "host": "localhost",
     "dialect": "mysql"
