final changes to model(hopefully)

--- a/config/config.json
+++ b/config/config.json
@@ -3,7 +3,7 @@
 {
   "development": {
     "username": "root",
-    "password": "password",
+    "password": "052595my",
     "database": "recipedb",
     "host": "localhost",
     "dialect": "mysql"
