--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "052595my",
+    "password": "Teetop123!",
     "database": "recipedb",
     "host": "localhost",
     "dialect": "mysql"
